Weight a course the way its grading scheme is written
Weight lived on the individual item, but outlines do not publish it that
way — a single row like "Quizzes, Assignments and Labs 15%" covers a pile
of work. The reader was told to throw that structure away and warn about
it, so the student did the arithmetic by hand onto every assignment and
redid it whenever one more appeared.

Courses now carry weights: a named row with an optional percentage and a
colour. A percentage is split evenly across the items filed under it, so
15% over ten assignments is 1.5% each and an eleventh resplits them all
without anything being retyped. Leave the percentage blank and the row is
just a label; the item keeps whatever weight you give it. The section
totals what is set and says when it does not reach 100%.

The Assignment/Exam picker on an item is now that list, with Custom weight
at the top for anything not filed under a row — the only case that still
shows a per-item weight field. Exam or assignment is read from the weight's
name, reusing the pattern the Canvas import already matched titles with, so
reminders, ICS export, the calendar dots and the next-exam tile keep working
off one rule instead of two.

The reader fills it in: the grading scheme comes back as rows, every item
carries the row it belongs to, and both review screens offer them as
tickable lines that save before the items so the links resolve. Rule 6 of
the prompt said to drop group weights and now says to report them. The
course page reader takes pasted text as well as files — the endpoint always
accepted it, only the second entry point never offered it.

Uncategorised items are untouched and keep their own weight, so nothing
about an existing course changes until a weight is added to it. Guest mode
gained weights, todos and their categories, which were serving empty lists.

Weights are per course and cannot be shared between them, and an item
belongs to at most one.

Claude-Session: https://claude.ai/code/session